Fix warnings when building with JDK 17.